methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:1: error: not found: value faireV
override def run() {faireV()
                    ^